maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: ':' expected but ')' found.
def isDirLibre(dir):Boolean={
                  ^Escaper:41: error: identifier expected but '}' found.
}
^